--- a/home.html
+++ b/home.html
@@ -5,47 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="./style-home.css" />
+    <script
+      src="https://kit.fontawesome.com/aa08512730.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="home-header">
-      <div>
-        <img
-          src="https://i.pinimg.com/736x/b0/3e/6d/b03e6d21250b1151ac954ead769f486d.jpg"
-          alt="ảnh mẫu"
-        />
+      <img
+        src="https://i.pinimg.com/736x/ae/8f/e9/ae8fe98c0f21c1741612cff7f28afcb2.jpg"
+        alt="ảnh mẫu"
+      />
+      <div id="link">
+        <div>Liên kết ứng dụng</div>
+        <a href="https://www.facebook.com/"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://web.telegram.org/"
+          ><i class="fa-brands fa-telegram"></i
+        ></a>
       </div>
-      <div id="dg">CHIẾN PHẠM</div>
+      <div id="name">CHIẾN PHẠM</div>
     </div>
-    <div class="grid-cards">
-      <div>
-        <img
-          src="https://i.pinimg.com/1200x/23/bc/47/23bc47f623ae30cd24ddf86a33fae52c.jpg"
-          alt=".mẫu 1" width="300px" height="300px"
-        />
+    <div>
+      <div></div>
+    </div>
+    <div class="menu">
+      <div class="menu-bar">
+        <div>Danh sách</div>
+        <ul>
+          <li>Treo tường</li>
+          <li>Tủ sách</li>
+          <li>Phụ kiện</li>
+        </ul>
       </div>
-      <div>
-        <img
-          src="https://i.pinimg.com/736x/1a/d5/fb/1ad5fb727763079e08f6119e49a27d81.jpg"
-          alt="mẫu 2" width="300px" height="300px"
-        />
-      </div>
-      <div>
-        <img
-          src="https://i.pinimg.com/1200x/5b/9d/1e/5b9d1e19404b144a75d32e20669946f6.jpg"
-          alt="mẫu 3" width="300px" height="300px"
-        />
-      </div>
-      <div>
-        <img
-          src="https://i.pinimg.com/736x/da/05/51/da0551e6a0fd874666ab6f18ba0ae75a.jpg"
-          alt="mẫu 4" width="300px" height="300px"
-        />
-      </div>
-      <div>
-        <img
-          src="https://i.pinimg.com/736x/a6/12/be/a612be581d99b2118adeb1ee9e437c5e.jpg"
-          alt="mâu 5" width="300px" height="300px"
-        />
+      <div class="grid-cards">
+        <div class="grid-cards-img-1">
+          <img
+            src="https://i.pinimg.com/1200x/23/bc/47/23bc47f623ae30cd24ddf86a33fae52c.jpg"
+            alt=".mẫu 1"
+            width="200px"
+            height="200px"
+          />
+        </div>
+        <div>
+          <img
+            src="https://i.pinimg.com/736x/1a/d5/fb/1ad5fb727763079e08f6119e49a27d81.jpg"
+            alt="mẫu 2"
+            width="200px"
+            height="200px"
+          />
+        </div>
+        <div>
+          <img
+            src="https://i.pinimg.com/1200x/5b/9d/1e/5b9d1e19404b144a75d32e20669946f6.jpg"
+            alt="mẫu 3"
+            width="200px"
+            height="200px"
+          />
+        </div>
+        <div>
+          <img
+            src="https://i.pinimg.com/736x/da/05/51/da0551e6a0fd874666ab6f18ba0ae75a.jpg"
+            alt="mẫu 4"
+            width="200px"
+            height="200px"
+          />
+        </div>
+        <div>
+          <img
+            src="https://i.pinimg.com/736x/a6/12/be/a612be581d99b2118adeb1ee9e437c5e.jpg"
+            alt="mâu 5"
+            width="200px"
+            height="200px"
+          />
+        </div>
       </div>
     </div>
     <script src="./script.js" defer></script>
